--- a/public/02-create-room.html
+++ b/public/02-create-room.html
@@ -32,25 +32,27 @@
 				<div class="sCreateObject__body">
 					<div class="sCreateObject__left-side">
 						<h2>Создание помещения</h2>
-						<div class="sCreateObject__main-row row">
-							<div class="col-12">
-								<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
-									<div class="custom-input-wrap__line">
+						<div class="form-wrap">
+							<div class="form-wrap__main-row row">
+								<div class="col-12">
+									<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
+										<div class="custom-input-wrap__line">
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="col-12">
-								<div class="sCreateObject__input-wrap form-group"><textarea class="sCreateObject__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
+								<div class="col-12">
+									<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
+									</div>
+									<!-- +e.input-wrap-->
 								</div>
-								<!-- +e.input-wrap-->
-							</div>
-							<div class="col-12">
-								<div class="sCreateObject__create-room">
-									<div class="sCreateObject__icon-wrap">
-										<svg class="icon icon-plus ">
-											<use xlink:href="img/svg/sprite.svg#plus"></use>
-										</svg>
-									</div>Указать замеры помещения
+								<div class="col-12">
+									<div class="form-wrap__create-room">
+										<div class="form-wrap__icon-wrap">
+											<svg class="icon icon-plus ">
+												<use xlink:href="img/svg/sprite.svg#plus"></use>
+											</svg>
+										</div>Указать замеры помещения
+									</div>
 								</div>
 							</div>
 						</div>
