--- a/public/02-edit-object-d.html
+++ b/public/02-edit-object-d.html
@@ -32,17 +32,19 @@
 				<div class="sCreateObject__body">
 					<div class="sCreateObject__left-side">
 						<h2>Создание объекта</h2>
-						<div class="sCreateObject__main-row row">
-							<div class="col-12">
-								<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
-									<div class="custom-input-wrap__line">
+						<div class="form-wrap">
+							<div class="form-wrap__main-row row">
+								<div class="col-12">
+									<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
+										<div class="custom-input-wrap__line">
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="col-12">
-								<div class="sCreateObject__input-wrap form-group"><textarea class="sCreateObject__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
+								<div class="col-12">
+									<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
+									</div>
+									<!-- +e.input-wrap-->
 								</div>
-								<!-- +e.input-wrap-->
 							</div>
 						</div>
 					</div>
