--- a/public/02-edit-room.html
+++ b/public/02-edit-room.html
@@ -32,30 +32,32 @@
 				<div class="sCreateObject__body">
 					<div class="sCreateObject__left-side">
 						<h2>Редактирование помещения</h2>
-						<div class="sCreateObject__main-row row">
-							<div class="col-12">
-								<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
-									<div class="custom-input-wrap__line">
+						<div class="form-wrap">
+							<div class="form-wrap__main-row row">
+								<div class="col-12">
+									<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
+										<div class="custom-input-wrap__line">
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="col-12">
-								<div class="sCreateObject__input-wrap form-group"><textarea class="sCreateObject__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
+								<div class="col-12">
+									<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
+									</div>
+									<!-- +e.input-wrap-->
 								</div>
-								<!-- +e.input-wrap-->
-							</div>
-							<div class="col-12">
-								<div class="plan-block"><img class="res-i" src="img/plan-d.png" alt="">
-									<div class="plan-block__info">
-										<p class="row"><span class="col">Площадь</span><span class="col-auto">32</span></p>
-										<p class="row"><span class="col">Площадь стен</span><span class="col-auto">324</span></p>
-										<p class="row"><span class="col">Площадь потолка</span><span class="col-auto">322</span></p>
-										<p class="row"><span class="col">Площадь пола</span><span class="col-auto">322</span></p>
-										<a class="plan-block__edit" href="./react-planner/demo/dist/index.html" target="_blank">Редактировать
-											<svg class="icon icon-edit ">
-												<use xlink:href="img/svg/sprite.svg#edit"></use>
-											</svg>
-										</a>
+								<div class="col-12">
+									<div class="plan-block"><img class="res-i" src="img/plan-d.png" alt="">
+										<div class="plan-block__info">
+											<p class="row"><span class="col">Площадь</span><span class="col-auto">32</span></p>
+											<p class="row"><span class="col">Площадь стен</span><span class="col-auto">324</span></p>
+											<p class="row"><span class="col">Площадь потолка</span><span class="col-auto">322</span></p>
+											<p class="row"><span class="col">Площадь пола</span><span class="col-auto">322</span></p>
+											<a class="plan-block__edit" href="./react-planner/demo/dist/index.html" target="_blank">Редактировать
+												<svg class="icon icon-edit ">
+													<use xlink:href="img/svg/sprite.svg#edit"></use>
+												</svg>
+											</a>
+										</div>
 									</div>
 								</div>
 							</div>
